--- a/k8s/spring-deployment.yaml
+++ b/k8s/spring-deployment.yaml
@@ -1,118 +1,26 @@
-# =======================
-# PersistentVolume MySQL
-# =======================
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: mysql-pv
-  namespace: devops
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: /mnt/data/mysql
----
-# =======================
-# PersistentVolumeClaim MySQL
-# =======================
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pvc
-  namespace: devops
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
----
-# =======================
-# Deployment MySQL
-# =======================
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: mysql-deployment
-  namespace: devops
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: mysql
-  template:
-    metadata:
-      labels:
-        app: mysql
-    spec:
-      containers:
-        - name: mysql
-          image: mysql:8.0
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              value: "Base_Securise_123"
-          ports:
-            - containerPort: 3306
-          volumeMounts:
-            - name: mysql-storage
-              mountPath: /var/lib/mysql
-      volumes:
-        - name: mysql-storage
-          persistentVolumeClaim:
-            claimName: mysql-pvc
----
-# =======================
-# Service MySQL
-# =======================
-apiVersion: v1
-kind: Service
-metadata:
-  name: mysql-service
-  namespace: devops
-spec:
-  selector:
-    app: mysql
-  ports:
-    - port: 3306
-      targetPort: 3306
-  type: ClusterIP
----
-# =======================
-# ConfigMap Spring Boot
-# =======================
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: spring-config
-  namespace: devops
 data:
-  DB_URL: jdbc:mysql://mysql-service:3306/devopsdb
+  SPRING_DATASOURCE_URL: jdbc:mysql://mysql-service:3306/springdb
+  SPRING_JPA_HIBERNATE_DDL_AUTO: update
 ---
-# =======================
-# Secret Spring Boot
-# =======================
 apiVersion: v1
 kind: Secret
 metadata:
   name: spring-secret
-  namespace: devops
 type: Opaque
 data:
-  DB_USER: cm9vdA==        # "root"
-  DB_PASSWORD: QmFzZV9TZXN1cmlzZV8xMjM=  # "Base_Securise_123"
+  SPRING_DATASOURCE_USERNAME: cm9vdA==
+  SPRING_DATASOURCE_PASSWORD: cm9vdDEyMw==
 ---
-# =======================
-# Deployment Spring Boot
-# =======================
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: spring-app
-  namespace: devops
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: spring-app
@@ -122,40 +30,26 @@ spec:
         app: spring-app
     spec:
       containers:
-        - name: spring
-          image: hbouthayna/student-management:latest
+        - name: spring-app
+          image: chaibimarwa/student-management:latest
+          imagePullPolicy: Always
           ports:
-            - containerPort: 8089
-          env:
-            - name: SPRING_DATASOURCE_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: spring-config
-                  key: DB_URL
-            - name: SPRING_DATASOURCE_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: spring-secret
-                  key: DB_USER
-            - name: SPRING_DATASOURCE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: spring-secret
-                  key: DB_PASSWORD
+            - containerPort: 8080
+          envFrom:
+            - configMapRef:
+                name: spring-config
+            - secretRef:
+                name: spring-secret
 ---
-# =======================
-# Service Spring Boot
-# =======================
 apiVersion: v1
 kind: Service
 metadata:
   name: spring-service
-  namespace: devops
 spec:
-  type: NodePort
   selector:
     app: spring-app
   ports:
-    - port: 8089
+    - port: 8080
       targetPort: 8089
       nodePort: 30080
+  type: NodePort
