--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -42,7 +42,7 @@ spec:
             - name: MYSQL_ROOT_PASSWORD
               value: root123
             - name: MYSQL_DATABASE
-              value: springdb
+              value: studentdb
           ports:
             - containerPort: 3306
           volumeMounts:
