--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -76,6 +77,12 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.9.1.2184</version>
+        </plugin>
         </plugins>
     </build>
 
