--- a/k8s/sonarqube-stack.yaml
+++ b/k8s/sonarqube-stack.yaml
@@ -33,8 +33,8 @@ spec:
             - containerPort: 9000
           resources:
             requests:
+              memory: "1Gi"
+              cpu: "250m"
+            limits:
               memory: "2Gi"
               cpu: "500m"
-            limits:
-              memory: "4Gi"
-              cpu: "1"
