--- a/k8s/sonarqube-stack.yaml
+++ b/k8s/sonarqube-stack.yaml
@@ -1,16 +1,17 @@
----
 apiVersion: v1
 kind: Service
 metadata:
   name: sonarqube
 spec:
+  type: NodePort
   selector:
     app: sonarqube
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 9000
       targetPort: 9000
-  type: NodePort
+      nodePort: 30090
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -28,9 +29,12 @@ spec:
     spec:
       containers:
         - name: sonarqube
-          image: sonarqube:latest
+          image: sonarqube:9.9-community
           ports:
             - containerPort: 9000
+          env:
+            - name: SONAR_ES_BOOTSTRAP_CHECKS_DISABLE
+              value: "true"
           resources:
             requests:
               memory: "1Gi"
@@ -38,3 +42,15 @@ spec:
             limits:
               memory: "2Gi"
               cpu: "500m"
+          livenessProbe:
+            httpGet:
+              path: /api/system/status
+              port: 9000
+            initialDelaySeconds: 90
+            periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /api/system/status
+              port: 9000
+            initialDelaySeconds: 60
+            periodSeconds: 20
