--- a/k8s/grafana-deployment.yaml
+++ b/k8s/grafana-deployment.yaml
@@ -1,66 +1,34 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: mysql-pv
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/data/mysql"
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql
+  name: grafana
+  namespace: monitoring
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mysql
+      app: grafana
   template:
     metadata:
       labels:
-        app: mysql
+        app: grafana
     spec:
       containers:
-        - name: mysql
-          image: mysql:8.0
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              value: root123
-            - name: MYSQL_DATABASE
-              value: springdb
+        - name: grafana
+          image: grafana/grafana
           ports:
-            - containerPort: 3306
-          volumeMounts:
-            - name: mysql-storage
-              mountPath: /var/lib/mysql
-      volumes:
-        - name: mysql-storage
-          persistentVolumeClaim:
-            claimName: mysql-pvc
+            - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service
+  name: grafana
+  namespace: monitoring
 spec:
-  selector:
-    app: mysql
+  type: NodePort
   ports:
-    - port: 3306
-      targetPort: 3306
-  type: ClusterIP
+    - port: 3000
+      targetPort: 3000
+      nodePort: 30030
+  selector:
+    app: grafana
