--- a/k8s/prometheus-deployment.yaml
+++ b/k8s/prometheus-deployment.yaml
@@ -10,15 +10,14 @@ data:
     scrape_configs:
       - job_name: 'jenkins'
         static_configs:
-          - targets: ['jenkins.monitoring.svc.cluster.local:8080']
+          - targets: ['jenkins.devops.svc.cluster.local:8080']
       - job_name: 'node-exporter'
         static_configs:
           - targets: ['node-exporter.monitoring.svc.cluster.local:9100']
       - job_name: 'spring-boot'
         metrics_path: '/actuator/prometheus'
         static_configs:
-          - targets: ['spring-app.monitoring.svc.cluster.local:8081']
-
+          - targets: ['spring-service.devops.svc.cluster.local:8080']
 ---
 apiVersion: apps/v1
 kind: Deployment
