--- a/k8s/sonarqube-stack.yaml
+++ b/k8s/sonarqube-stack.yaml
@@ -1,22 +1,8 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: sonarqube
-spec:
-  type: NodePort
-  selector:
-    app: sonarqube
-  ports:
-    - name: http
-      protocol: TCP
-      port: 9000
-      targetPort: 9000
-      nodePort: 30090
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sonarqube
+  namespace: devops
 spec:
   replicas: 1
   selector:
@@ -54,3 +40,17 @@ spec:
               port: 9000
             initialDelaySeconds: 60
             periodSeconds: 20
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sonarqube
+  namespace: devops
+spec:
+  type: NodePort
+  selector:
+    app: sonarqube
+  ports:
+    - port: 9000
+      targetPort: 9000
+      nodePort: 30090
