--- a/k8s/prometheus-deployment.yaml
+++ b/k8s/prometheus-deployment.yaml
@@ -10,10 +10,10 @@ data:
 
     scrape_configs:
       - job_name: 'jenkins'
-        metrics_path: '/prometheus'
+        metrics_path: /prometheus
         static_configs:
           - targets:
-              - 'host.docker.internal:8080'
+              - 'jenkins.monitoring.svc.cluster.local:8080'
 
       - job_name: 'node-exporter'
         static_configs:
@@ -21,7 +21,7 @@ data:
               - 'node-exporter.monitoring.svc.cluster.local:9100'
 
       - job_name: 'spring-boot'
-        metrics_path: '/actuator/prometheus'
+        metrics_path: /student/actuator/prometheus
         static_configs:
           - targets:
               - 'spring-service.devops.svc.cluster.local:8080'
@@ -44,16 +44,24 @@ spec:
     spec:
       containers:
         - name: prometheus
-          image: prom/prometheus
+          image: prom/prometheus:latest
+          args:
+            - "--config.file=/etc/prometheus/prometheus.yml"
+            - "--storage.tsdb.path=/prometheus"
           ports:
             - containerPort: 9090
           volumeMounts:
             - name: config-volume
               mountPath: /etc/prometheus
+              readOnly: true
+            - name: data
+              mountPath: /prometheus
       volumes:
         - name: config-volume
           configMap:
             name: prometheus-config
+        - name: data
+          emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
@@ -62,9 +70,9 @@ metadata:
   namespace: monitoring
 spec:
   type: NodePort
+  selector:
+    app: prometheus
   ports:
     - port: 9090
       targetPort: 9090
       nodePort: 30070
-  selector:
-    app: prometheus
