--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Server configuration :
 server.port=8089
 server.servlet.context-path=/student
+
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.base-path=/actuator
