--- a/k8s/prometheus-deployment.yaml
+++ b/k8s/prometheus-deployment.yaml
@@ -9,22 +9,23 @@ data:
       scrape_interval: 15s
 
     scrape_configs:
+
       - job_name: 'jenkins'
-        metrics_path: /prometheus
+        metrics_path: '/prometheus'
         static_configs:
           - targets:
-              - 'jenkins.monitoring.svc.cluster.local:8080'
+              - 'host.docker.internal:8080'
+
+      - job_name: 'spring-boot'
+        metrics_path: '/student/actuator/prometheus'
+        static_configs:
+          - targets:
+              - 'spring-service.devops.svc.cluster.local:8080'
 
       - job_name: 'node-exporter'
         static_configs:
           - targets:
               - 'node-exporter.monitoring.svc.cluster.local:9100'
-
-      - job_name: 'spring-boot'
-        metrics_path: /student/actuator/prometheus
-        static_configs:
-          - targets:
-              - 'spring-service.devops.svc.cluster.local:8080'
 
 ---
 apiVersion: apps/v1
