--- a/k8s/prometheus-deployment.yaml
+++ b/k8s/prometheus-deployment.yaml
@@ -9,23 +9,22 @@ data:
       scrape_interval: 15s
 
     scrape_configs:
-
-      - job_name: 'jenkins'
-        metrics_path: '/prometheus'
+      - job_name: "prometheus"
         static_configs:
-          - targets:
-              - 'host.docker.internal:8080'
+          - targets: ["localhost:9090"]
 
-      - job_name: 'spring-boot'
-        metrics_path: '/student/actuator/prometheus'
+      - job_name: "spring-app"
+        metrics_path: /actuator/prometheus
         static_configs:
-          - targets:
-              - 'spring-service.devops.svc.cluster.local:8080'
+          - targets: ["spring-service:8080"]
 
-      - job_name: 'node-exporter'
+      - job_name: "jenkins"
         static_configs:
-          - targets:
-              - 'node-exporter.monitoring.svc.cluster.local:9100'
+          - targets: ["host.docker.internal:8080"]
+
+      - job_name: "node"
+        static_configs:
+          - targets: ["host.docker.internal:9100"]
 
 ---
 apiVersion: apps/v1
@@ -45,24 +44,19 @@ spec:
     spec:
       containers:
         - name: prometheus
-          image: prom/prometheus:latest
+          image: prom/prometheus
           args:
             - "--config.file=/etc/prometheus/prometheus.yml"
-            - "--storage.tsdb.path=/prometheus"
           ports:
             - containerPort: 9090
           volumeMounts:
-            - name: config-volume
-              mountPath: /etc/prometheus
-              readOnly: true
-            - name: data
-              mountPath: /prometheus
+            - name: config
+              mountPath: /etc/prometheus/
       volumes:
-        - name: config-volume
+        - name: config
           configMap:
             name: prometheus-config
-        - name: data
-          emptyDir: {}
+
 ---
 apiVersion: v1
 kind: Service
