--- a/k8s/prometheus-deployment.yaml
+++ b/k8s/prometheus-deployment.yaml
@@ -9,22 +9,27 @@ data:
       scrape_interval: 15s
 
     scrape_configs:
+      # Prometheus lui-même
       - job_name: "prometheus"
         static_configs:
           - targets: ["localhost:9090"]
 
+      # Spring Boot via Actuator
       - job_name: "spring-app"
         metrics_path: /actuator/prometheus
         static_configs:
           - targets: ["spring-service:8080"]
 
+      # Jenkins LOCAL (machine WSL)
       - job_name: "jenkins"
+        metrics_path: /prometheus
         static_configs:
-          - targets: ["host.docker.internal:8080"]
+          - targets: ["172.21.29.107:8080"]
 
+      # Node Exporter (Kubernetes Service)
       - job_name: "node"
         static_configs:
-          - targets: ["host.docker.internal:9100"]
+          - targets: ["node-exporter:9100"]
 
 ---
 apiVersion: apps/v1
