--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=student-management
 spring.datasource.url=jdbc:mysql://mysql-service:3306/springdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Base_Securise_123
+spring.datasource.password=root123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
