--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=student-management
-spring.datasource.url=jdbc:mysql://mysql-service:3306/springdb?createDatabaseIfNotExist=true
+
+spring.datasource.url=jdbc:mysql://mysql-service:3306/springdb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root123
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
 
-# Server configuration :
 server.port=8089
 server.servlet.context-path=/student
 
 management.endpoints.web.base-path=/actuator
-management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoints.web.exposure.include=health,info,prometheus
