--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.application.name=student-management
-
-spring.datasource.url=jdbc:mysql://mysql-service:3306/springdb?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.url=jdbc:mysql://mysql-service:3306/springdb
+spring.datasource.username=springuser
+spring.datasource.password=spring123
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
 server.port=8089
