--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://mysql-service:3306/springdb
-spring.datasource.username=springuser
-spring.datasource.password=spring123
+spring.datasource.username=root
+spring.datasource.password=root123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
